@@ -5,6 +5,15 @@ mac getIpByName liefert name von IPnum
 
 
 ##################################################################
+opsi-winst/opsi-script (4.12.4.1) experimental; urgency=low
+
+  * some more log on startup
+  * oslog: makebakfiles: rename instead of copy (much faster)
+  * fix uefi detection on win10 >= release 1004
+  * osfuncwin: WinIsUefi: the fix is here
+
+-- d.oertel <d.oertel@uib.de> Thu, 27 Aug 2020 15:00
+
 opsi-winst/opsi-script (4.12.4.0) experimental; urgency=low
 
   * includes changes from github merge request "Feature / Implementation parity between WinBatch, DosBatch and ExecWith"
